include header image
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/pkg2html@7 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/inst/template/_includes/header.html
+++ b/pkg/inst/template/_includes/header.html
@@ -129,8 +129,12 @@ blockquote {
 
   <div class="wrap">
 
+  {% if site.data.pkg.headpic %}
+    <img src="{{ site.data.pkg.headpic }}" width="100%">
+  {% else %}
     <a class="site-title" href="{{ site.baseurl }}/">{{ site.data.pkg.Package }}</a>
-
+  {% endif %}
+                  
     <nav class="site-nav">
       <div class="trigger">
         <a class="page-link" href="/">Home</a>
