--- a/pkg/inst/template/03_outreach.html
+++ b/pkg/inst/template/03_outreach.html
@@ -6,6 +6,9 @@ permalink: /outreach/
 
 <div class="home">
 
+Papers reporting results based on package {{ site.data.pkg.Package }} or papers
+referring to the methodology:
+<P>
  <ul class="posts">
      {% for paper in site.data.cites %}
      {% if paper.gs %}
