--- a/pkg/inst/template/02_authors.html
+++ b/pkg/inst/template/02_authors.html
@@ -8,7 +8,7 @@ permalink: /authors/
 
 Package {{ site.data.pkg.Package }} is maintained by 
 {% for maintainer in site.data.maintainer %}
-{{ maintainer.name }}; 
+{{ maintainer.name }} (Email: {{ maintainer.email }}) 
 {% endfor %}
 please send questions, suggestions, corrections to the maintainer only.
 
@@ -20,9 +20,9 @@ please send questions, suggestions, corrections to the maintainer only.
       <a target="_blank" href="{{ author.url }}">
     {% endif %}
     {% if author.image %}
-      <img src="{{ author.image }}" alt="{{ author.name }}" height="25%">
+      <img src="{{ author.image }}" alt="{{ author.name }}" height="100px">
     {% else %}
-      <img src="/img/anonymous.png" alt="{{ author.name }}" height="25%">
+      <img src="/img/anonymous.png" alt="{{ author.name }}" height="100px">
     {% endif %}
     {% if author.url %}
       </a>
