--- a/pkg/inst/template/_includes/footer.html
+++ b/pkg/inst/template/_includes/footer.html
@@ -5,13 +5,13 @@
     <nav class="site-nav">
           <div class="trigger">
           
-    <A HREF={{ site.data.pkg.Download }}>Download</A>
+    <A class="page-link" HREF={{ site.data.pkg.Download }}>Download</A>
 
-    <A HREF={{ site.data.pkg.Manual }}>Manual</A>
+    <A class="page-link" HREF={{ site.data.pkg.Manual }}>Manual</A>
     
-    <A HREF={{ site.data.pkg.Source }}>Source</A>
+    <A class="page-link" HREF={{ site.data.pkg.Source }}>Source</A>
 
-    <A HREF={{ site.data.pkg.Devel }}>Development</A>
+    <A class="page-link" HREF={{ site.data.pkg.Devel }}>Development</A>
 
 
 </div>
