--- a/pkg/inst/template/_includes/head.html
+++ b/pkg/inst/template/_includes/head.html
@@ -9,4 +9,9 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
 
+<style>
+{{ site.data.pkg.acol }}
+{{ site.data.pkg.acolvisited }}
+</style>
+
 </head>
