--- a/pkg/inst/template/02_authors.html
+++ b/pkg/inst/template/02_authors.html
@@ -20,9 +20,9 @@ please send questions, suggestions, corrections to the maintainer only.
       <a target="_blank" href="{{ author.url }}">
     {% endif %}
     {% if author.image %}
-      <img src="{{ author.image }}" alt="{{ author.name }}" height="100px">
+      <img src="{{ author.image }}" alt="Homepage" height="100px">
     {% else %}
-      <img src="/img/anonymous.png" alt="{{ author.name }}" height="100px">
+      <img src="/img/anonymous.png" alt="Homepage" height="100px">
     {% endif %}
     {% if author.url %}
       </a>
