--- a/pkg/inst/template/css/main.css
+++ b/pkg/inst/template/css/main.css
@@ -45,6 +45,9 @@ a:visited { color: #205caa; }
   border-bottom: 1px solid #e8e8e8;
   min-height: 56px;
   background-color: white;
+  background-image: url(/img/backgrnd.png);
+  background-repeat: no-repeat;
+  background-position: center bottom;
 }
 
 .site-title,
@@ -68,8 +71,9 @@ a:visited { color: #205caa; }
 .site-nav .menu-icon { display: none; }
 
 .site-nav .page-link {
-  margin-left: 20px;
-  color: #727272;
+  margin-left: 10px;
+  margin-right: 10px;
+  color: black;
   letter-spacing: -.5px;
 }
 
@@ -80,55 +84,11 @@ a:visited { color: #205caa; }
   padding: 30px 0;
 }
 
-.footer-heading {
-  font-size: 18px;
-  font-weight: 300;
+.site-footer .ext-link {
+  margin-left: 10px;
+  margin-right: 10px;
+  color: black;     
   letter-spacing: -.5px;
-  margin-bottom: 15px;
-}
-
-.site-footer .column { float: left; margin-bottom: 15px; }
-
-.footer-col-1 {
-  width: 270px; /*fallback*/
-  width: -webkit-calc(35% - 10px);
-  width: -moz-calc(35% - 10px);
-  width: -o-calc(35% - 10px);
-  width: calc(35% - 10px);
-  margin-right: 10px
-}
-.footer-col-2 {
-  width: 175px; /*fallback*/
-  width: -webkit-calc(23.125% - 10px);
-  width: -moz-calc(23.125% - 10px);
-  width: -o-calc(23.125% - 10px);
-  width: calc(23.125% - 10px);
-  margin-right: 10px
-}
-.footer-col-3 {
-  width: 335px; /*fallback*/
-  width: -webkit-calc(41.875%);
-  width: -moz-calc(41.875%);
-  width: -o-calc(41.875%);
-  width: calc(41.875%);
-}
-
-.site-footer ul { list-style: none; }
-
-.site-footer li,
-.site-footer p {
-  font-size: 15px;
-  letter-spacing: -.3px;
-  color: #828282;
-}
-
-.github-icon-svg,
-.twitter-icon-svg {
-  display: inline-block;
-  width: 16px;
-  height: 16px;
-  position: relative;
-  top: 3px;
 }
 
 
@@ -234,7 +194,7 @@ a:visited { color: #205caa; }
   -moz-border-radius: 3px;
   border-radius: 3px;
   font-size: 15px;
-  overflow:scroll;
+/*  overflow:scroll; */
 }
 
 .post code { padding: 1px 5px; }
@@ -365,18 +325,6 @@ a:visited { color: #205caa; }
     border: 1px solid #e8e8e8;
   }
 
-  .site-nav .menu-icon {
-    display: block;
-    font-size: 24px;
-    color: #505050;
-    float: right;
-    width: 36px;
-    text-align: center;
-    line-height: 36px;
-  }
-
-  .site-nav .menu-icon svg { width: 18px; height: 16px; }
-
   .site-nav .trigger {
     clear: both;
     margin-bottom: 5px;
@@ -446,28 +394,29 @@ pre .operator, pre .paren {
      color: rgb(104, 118, 135)
    }
 
-   pre .literal {
+pre .literal {
      color: #990073
-   }
+}
 
-   pre .number {
+pre .number {
      color: #099;
-   }
+}
 
-   pre .comment {
+pre .comment {
      color: #998;
      font-style: italic
-   }
+}
 
-   pre .keyword {
+pre .keyword {
      color: #900;
      font-weight: bold
-   }
+}
 
-   pre .identifier {
+pre .identifier {
      color: rgb(0, 0, 0);
-   }
+}
 
-   pre .string {
+pre .string {
      color: #d14;
-   }
+}
+
