no valid email addresses
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/pkg2html@18 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/inst/template/_includes/header.html
+++ b/pkg/inst/template/_includes/header.html
@@ -14,7 +14,7 @@ hljs.initHighlightingOnLoad();
   <div class="wrap">
 
   {% if site.data.pkg.headpic %}
-    <img src="{{ site.data.pkg.headpic }}">
+    <img src="{{ site.data.pkg.headpic | prepend: site.baseurl }} ">
   {% else %}
     <a class="site-title" href="{{ site.baseurl }}/">{{ site.data.pkg.Package }}</a>
   {% endif %}
