--- a/pkg/inst/template/_includes/footer.html
+++ b/pkg/inst/template/_includes/footer.html
@@ -5,7 +5,9 @@
     <nav class="site-nav">
           <div class="trigger">
           
-    <A class="page-link" HREF={{ site.data.pkg.Download }}>Download</A>
+    Download:
+
+    <A class="page-link" HREF={{ site.data.pkg.Download }}>CRAN</A>
 
     <A class="page-link" HREF={{ site.data.pkg.Manual }}>Manual</A>
     
