--- a/pkg/inst/template/_includes/footer.html
+++ b/pkg/inst/template/_includes/footer.html
@@ -7,7 +7,7 @@
           
     Download:
 
-    <A class="page-link" HREF={{ site.data.pkg.Download }}>CRAN</A>
+    <A class="page-link" HREF={{ site.data.pkg.CRAN }}>CRAN</A>
 
     <A class="page-link" HREF={{ site.data.pkg.Manual }}>Manual</A>
     
